# arx-r5-sdk

./: .gitignore  GH_CLI_SETUP.md  GITHUB_WORKFLOW_GUIDE.md  MANIFEST.in  PUBLISHING.md  PYPI_QUICK_START.md  README.md  build_manylinux.sh  build_package.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build-and-publish-manylinux.yml  build-and-publish-ubuntu.yml  build-manylinux-wheels.yml  build-ubuntu-wheels.yml  build-wheels.yml  publish-to-pypi.yml  publish-ubuntu.yml  test-and-publish.yml
examples/: test_dual_arm.py  test_keyboard.py  test_kinematic_solver.py  test_single_arm.py
py/ARX_R5_python/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py  test_dual_arm.py  test_keyboard.py  test_kinematic_solver.py  test_single_arm.py
py/ARX_R5_python/src/arx_r5_sdk/: __init__.py  single_arm.py  solver.py
py/ARX_R5_python/src/arx_r5_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py/ARX_R5_python/src/arx_r5_sdk/lib/: __init__.py
vassar_arx_r5_sdk/: __init__.py  setup.sh  test_kinematic_solver.py
vassar_arx_r5_sdk/bimanual/: CMakeLists.txt  build.sh
vassar_arx_r5_sdk/bimanual/script/: single_arm.py  solver.py
