[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "vassar-arx-r5-sdk"
version = "0.1.0"
description = "Python SDK for ARX R5 Robot Arm Control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "ARXrobotics", email = "contact@arx-x.com"},
]
maintainers = [
    {name = "Vassar"},
]
keywords = ["robotics", "robot arm", "ARX", "R5", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Robotics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/ARXroboticsX/R5"
"Bug Reports" = "https://github.com/ARXroboticsX/R5/issues"
Source = "https://github.com/ARXroboticsX/R5"

[project.optional-dependencies]
dev = [
    "pybind11>=2.6.0",
    "cmake>=3.18",
]

[tool.setuptools.packages.find]
include = ["vassar_arx_r5_sdk*"]

[tool.setuptools.package-data]
vassar_arx_r5_sdk = [
    "bimanual/script/*.urdf",
    "bimanual/lib/*.so",
    "bimanual/lib/*.hpp",
    "bimanual/lib/arx_r5_src/*.so",
    "bimanual/lib/arx_r5_src/include/**/*",
    "bimanual/lib/arx_hardware_interface/include/**/*",
    "bimanual/src/*.cpp",
    "bimanual/CMakeLists.txt",
    "bimanual/build.sh",
]

[tool.cibuildwheel]
# Only build for Linux - targeting Ubuntu 22.04/24.04 LTS
build = "cp310-manylinux* cp311-manylinux* cp312-manylinux*"
skip = "cp36-* cp37-* cp38-* cp39-* *-musllinux_*"

# Install system dependencies in the build container
before-all = [
    "yum update -y --nogpgcheck || true",
    "yum install -y cmake --nogpgcheck || yum install -y cmake3 --nogpgcheck",
]

# Test that the package can be imported
test-command = "python -c 'import vassar_arx_r5_sdk'"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 for Ubuntu 22.04/24.04 LTS compatibility
# This provides glibc 2.28 which is compatible with Ubuntu 22.04 (glibc 2.35) and 24.04 (glibc 2.39)
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

# Only build for Python versions commonly available on Ubuntu 22.04/24.04
# Ubuntu 22.04: Python 3.10 (default), 3.8, 3.9, 3.11 available
# Ubuntu 24.04: Python 3.12 (default), 3.10, 3.11 available