[build-system]
requires = ["setuptools>=61.0", "pybind11", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "arx-r5-sdk"
version = "0.1.0"
authors = [
  { name="ARXRobotics", email="contact@arx-x.com" },
]
description = "ARX R5 Robotic Arm SDK"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/ARXroboticsX/R5"
"Bug Tracker" = "https://github.com/ARXroboticsX/R5/issues"
